--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,9 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная</title>
-</head>
+  <link rel="stylesheet" href="/static/main/css/index.css">
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+
+
+  </head>
 <body>
-  <h1>главная страница</h1>
-  <p>главная страница</p>
+    <img class="logo"src="/static/main/img/logo.png" alt="logotip">
+<!-- Slider main container -->
+<div class="swiper">
+  <!-- Additional required wrapper -->
+  <div class="swiper-wrapper">
+    <!-- Slides -->
+    <a class="swiper-slide" id="about" href='/'>О нас</a>
+    <div class="swiper-slide" id="frame">Slide 2</div>
+    <div class="swiper-slide" id="lenses">Slide 3</div>
+    ...
+  </div>
+  <!-- If we need pagination -->
+  <div class="swiper-pagination"></div>
+
+  <!-- If we need navigation buttons -->
+  <div class="swiper-button-prev"></div>
+  <div class="swiper-button-next"></div>
+
+  <!-- If we need scrollbar -->
+  {% comment %} <div class="swiper-scrollbar"></div> {% endcomment %}
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="/static/main/js/index.js"></script>
+
 </body>
 </html>
