--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная</title>
   <link rel="stylesheet" href="/static/main/css/index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+  
 
 
   </head>
@@ -20,8 +21,8 @@
   <div class="swiper-wrapper">
     <!-- Slides -->
     <a class="swiper-slide" id="about" href='/'>О нас</a>
-    <div class="swiper-slide" id="frame">Slide 2</div>
-    <div class="swiper-slide" id="lenses">Slide 3</div>
+    <a class="swiper-slide" id="frame" href=''>Оправы</a>
+    <a class="swiper-slide" id="lenses" href=''>Линзы</a>
     ...
   </div>
   <!-- If we need pagination -->
