--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -6,6 +6,7 @@
 
 a {
   color: black;
+  text-decoration: none;
 }
 
 body{
@@ -32,7 +33,8 @@ body{
 }
 .swiper{
   /* background-color: aliceblue; */
-  width: 600px;
+  margin-top: 100px;
+  width: 900px;
   height: 300px;
 }
 #about{
