--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,13 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная</title>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <link rel="stylesheet" href="/static/main/css/index.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-  
-
 
   </head>
 <body>
@@ -23,7 +19,10 @@
     <a class="swiper-slide" id="about" href='/'>О нас</a>
     <a class="swiper-slide" id="frame" href=''>Оправы</a>
     <a class="swiper-slide" id="lenses" href=''>Линзы</a>
-    ...
+    <a class="swiper-slide" id="News" href=''>Новости</a>
+    <a class="swiper-slide" id="Portfolio" href=''>Портфолио</a>
+    <a class="swiper-slide" id="reviews" href=''>Отзывы</a>
+    
   </div>
   <!-- If we need pagination -->
   <div class="swiper-pagination"></div>
