создал авторизацию, настройки login

--- a/login/static/login/css/login.css
+++ b/login/static/login/css/login.css
@@ -2,5 +2,11 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  height: 100vh;
+}
+form{
+  width: 700px;
+}
+input{
+  margin-bottom: 20px;
 }
