--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="/static/login/css/login.css">
 </head>
 <body>
-  <form action="POST">
+  <form method="POST">
     {% csrf_token %} {{form}}
+    <input type="submit" value="подтвердить">
   </form>
 </body>
 </html>
