--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -11,7 +11,7 @@ a {
 
 body{
   padding-top: 50px;
-  background-image: url("/static/main/img/bg.jpg");
+  background-image: url("/static/main/img/bg.jpg"); 
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -34,7 +34,7 @@ body{
 .swiper{
   /* background-color: aliceblue; */
   margin-top: 100px;
-  width: 900px;
+  width: 1200px;
   height: 300px;
 }
 #about{
@@ -56,5 +56,12 @@ body{
   display: flex !important;
   justify-content: center;
   font-size: 30px;
-  opacity: 0.5;
+  /* opacity: 0.5; */
+}
+
+.auth{
+  position: fixed;
+  top: 0;
+  right: 0;
+
 }
