--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -16,12 +16,12 @@
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <a class="swiper-slide" id="about" href='/'>О нас</a>
-    <a class="swiper-slide" id="frame" href=''>Оправы</a>
-    <a class="swiper-slide" id="lenses" href=''>Линзы</a>
-    <a class="swiper-slide" id="News" href=''>Новости</a>
-    <a class="swiper-slide" id="Portfolio" href=''>Портфолио</a>
-    <a class="swiper-slide" id="reviews" href=''>Отзывы</a>
+    <a class="swiper-slide" id="about" href='/'>о нас</a>
+    <a class="swiper-slide" id="frame" href=''>оправы</a>
+    <a class="swiper-slide" id="lensess" href=''>линзы</a>
+    <a class="swiper-slide" id="news" href=''>новости оптики</a>
+    <a class="swiper-slide" id="portfolio" href=''>наши работы</a>
+    <a class="swiper-slide" id="reviews" href=''>отзывы</a>
     
   </div>
   <!-- If we need pagination -->
