--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -75,9 +75,9 @@ body{
 }
 
 .auth{
-  position: fixed;
-  top: 0;
-  right: 0;
+  /* position: fixed; */
+  margin-top: 30px;
+  
 
 }
 
@@ -95,4 +95,11 @@ body{
   .swiper-slide{
     font-size: 20px;
   }
+}
+
+
+.register{
+  border: solid rgb(61, 88, 239);
+  border-radius: 15px;
+  
 }
