создали страницу отзывов

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -17,11 +17,11 @@
   <div class="swiper-wrapper">
     <!-- Slides -->
     <a class="swiper-slide" id="frame" href=''>оправы</a>
-    <a class="swiper-slide" id="about" href='/'>о нас</a>
+    <a class="swiper-slide" id="about" href='/about'>о нас</a>
     <a class="swiper-slide" id="lensess" href=''>линзы</a>
     <a class="swiper-slide" id="news" href=''>новости оптики</a>
     <a class="swiper-slide" id="portfolio" href=''>наши работы</a>
-    <a class="swiper-slide" id="reviews" href=''>отзывы</a>
+    <a class="swiper-slide" id="reviews" href='/review'>отзывы</a>
     
   </div>
   <!-- If we need pagination -->
