создал страницы для перехода со слайдов и css к ним, прописал пути

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/main/css/about.css">
-  <title>Про нас</title>
+  <title>о нас</title>
 </head>
 <body>
-  <h1>Про нас</h1>
-  <p>Про нас</p>
+  <h1>о нас</h1>
+  <p>новое качество нашей оптики - это мобильность</p>
 </body>
 </html>
