--- a/main/static/main/css/portfolio.css
+++ b/main/static/main/css/portfolio.css
@@ -11,7 +11,7 @@ a {
 
 body{
   padding-top: 50px;
-  background-image: url("/static/main/img/rvbg.png"); 
+  background-image: url("/static/main/img/pfbg.jpg"); 
   background-size: cover;
   display: flex;
   flex-direction: column;
