--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -18,9 +18,9 @@
     <!-- Slides -->
     <a class="swiper-slide" id="frame" href=''>оправы</a>
     <a class="swiper-slide" id="about" href='/about'>о нас</a>
-    <a class="swiper-slide" id="lensess" href=''>линзы</a>
-    <a class="swiper-slide" id="news" href=''>новости оптики</a>
-    <a class="swiper-slide" id="portfolio" href=''>наши работы</a>
+    <a class="swiper-slide" id="lensess" href='/lensess'>линзы</a>
+    <a class="swiper-slide" id="news" href='/news'>новости оптики</a>
+    <a class="swiper-slide" id="portfolio" href='/portfolio'>наши работы</a>
     <a class="swiper-slide" id="reviews" href='/review'>отзывы</a>
     
   </div>
