создал страницу frame, подключил css

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -16,7 +16,7 @@
   <!-- Additional required wrapper -->
   <div class="swiper-wrapper">
     <!-- Slides -->
-    <a class="swiper-slide" id="frame" href=''>оправы</a>
+    <a class="swiper-slide" id="frame" href='/frame'>оправы</a>
     <a class="swiper-slide" id="about" href='/about'>о нас</a>
     <a class="swiper-slide" id="lensess" href='/lensess'>линзы</a>
     <a class="swiper-slide" id="news" href='/news'>новости оптики</a>
