создал organizations.htmk, прописал путь b т.д.

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -22,6 +22,7 @@
     <a class="swiper-slide" id="news" href='/news'>новости оптики</a>
     <a class="swiper-slide" id="portfolio" href='/portfolio'>наши работы</a>
     <a class="swiper-slide" id="reviews" href='/review'>отзывы</a>
+    <a class="swiper-slide" id="organizations" href='/organizations'>организациям</a>
     
   </div>
   <!-- If we need pagination -->
