добавил фон organizations

--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -67,6 +67,11 @@ body{
   background-size: cover;
 }
 
+#organizations{
+  background-image: url("/static/main/img/orbg.jpg");
+  background-size: cover;
+}
+
 .swiper-slide{
   display: flex !important;
   justify-content: center;
