--- a/main/templates/main/organizations.html
+++ b/main/templates/main/organizations.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/static/main/css/news.css">
-  <title>новости</title>
+  <link rel="stylesheet" href="/static/main/css/organizations.css">
+  <title>организациям</title>
 </head>
 <body>
-  <h1>организациям</h1>
-  <p>в этом разделе мы раскажем о услугах организациям</p>
+  <h1>Услуги организациям, фирмам</h1>
+  <p>Мы с экономим ваше время и готовы приехать в офис</p>
 </body>
 </html>
