--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -1,36 +1,27 @@
-*{
+/* *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
+} */
 
-a {
+/* a {
   color: black;
   text-decoration: none;
-}
+} */
 
-body{
+/* body{
   padding-top: 50px;
   background-image: url("/static/main/img/bg.jpg"); 
   background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-/* body::after{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color:  rgba(50, 50, 50, 0.5);
 } */
+/* 
 .logo{
   height: 150px;
 
-}
+} */
 .swiper{
   /* background-color: aliceblue; */
   margin-top: 100px;
@@ -84,8 +75,6 @@ body{
   display: flex;
   flex-direction: column;
   margin-top: 30px;
-  
-
 }
 
 @media(max-width:1250px){
@@ -103,7 +92,6 @@ body{
     font-size: 20px;
   }
 }
-
 
 .register{
   border: solid rgb(61, 88, 239);
