--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная</title>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+ 
+  <link rel="stylesheet" href="/static/main/css/Pmain.css"> <!--paralax-->
   <link rel="stylesheet" href="/static/main/css/index.css">
-
   </head>
 <body>
-    <img class="logo"src="/static/main/img/logo.png" alt="logotip">
-<!-- Slider main container -->
+    {% comment %} <img class="logo"src="/static/main/img/logo.png" alt="logotip"> {% endcomment %}
+<!-- Основной контейнер слайдера -->
 <div class="swiper">
-  <!-- Additional required wrapper -->
+  <!-- Дополнительная требуемая оболочка -->
   <div class="swiper-wrapper">
-    <!-- Slides -->
+    <!-- Слайды -->
     <a class="swiper-slide" id="frame" href='/frame'>оправы</a>
     <a class="swiper-slide" id="about" href='/about'>о нас</a>
     <a class="swiper-slide" id="lensess" href='/lensess'>линзы</a>
@@ -25,29 +26,50 @@
     <a class="swiper-slide" id="organizations" href='/organizations'>организациям</a>
     
   </div>
-  <!-- If we need pagination -->
+  <!-- если нам нужна разбивка на страницы -->
   <div class="swiper-pagination"></div>
 
-  <!-- If we need navigation buttons -->
+  <!-- если нам нужны навигационные кнопки -->
   <div class="swiper-button-prev"></div>
   <div class="swiper-button-next"></div>
 
-  <!-- If we need scrollbar -->
+  <!-- Если нам нужна полоса прокрутки -->
   {% comment %} <div class="swiper-scrollbar"></div> {% endcomment %}
 </div>
+	<div class="logo" style="background-image: url(/static/main/img/Pimg/logo.svg);"></div>
 
-<div class='auth'>
-  {% if user.is_authenticated %}
-  {{user.username}}
-  <form action="/login/logout" method='POST'>
-    {% csrf_token %}
-    <input type="submit" value="Выйти">
-  </form>
-  {% else %}
-  <a class="register" href="/login/">регистрация</a>
-  <a class="open" href="/login/login">войти</a>
-  {% endif %}
-</div>
+	<section class="layers">
+		<div class="layers__container">
+			<div class="layers__item layer-1" style="background-image: url(/static/main/img/Pimg/layer-1.jpg);"></div>
+			<div class="layers__item layer-2" style="background-image: url(/static/main/img/Pimg/layer-2.png);"></div>
+			<div class="layers__item layer-3">
+				<div class="hero-content">
+					<h1>Мобильная оптика <span>в наше время</span></h1>
+					<div class="hero-content__p">мобильный подход  к решению задач ‘lens effect’</div>
+				</div>
+			</div>
+			<div class="layers__item layer-4">
+				<canvas class="rain"></canvas>
+			</div>
+			<div class="layers__item layer-5" style="background-image: url(/static/main/img/Pimg/layer-5.png);"></div>
+      <div class="layers__item layer-6" style="background-image: url(/static/main/img/Pimg/layer-6.png);"></div>
+		</div>
+	</section>
+  <div class='auth'>
+    {% if user.is_authenticated %}
+    {{user.username}}
+    <form action="/login/logout" method='POST'>
+      {% csrf_token %}
+      <input type="submit" value="Выйти">
+    </form>
+    {% else %}
+    <a class="register" href="/login/">регистрация</a>
+    <a class="open" href="/login/login">войти</a>
+    {% endif %}
+  </div>
+
+<script src="js/Papp.js" defer></script> <!--paralax-->
+<script src="libs/rain.js" defer></script> <!--paralax-->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="/static/main/js/index.js"></script>
 
