--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -36,16 +36,17 @@
   <!-- Если нам нужна полоса прокрутки -->
   {% comment %} <div class="swiper-scrollbar"></div> {% endcomment %}
 </div>
-	<div class="logo" style="background-image: url(/static/main/img/Pimg/logo.svg);"></div>
+	
 
 	<section class="layers">
 		<div class="layers__container">
 			<div class="layers__item layer-1" style="background-image: url(/static/main/img/Pimg/layer-1.jpg);"></div>
+      <div class="logo" style="background-image: url(/static/main/img/logo.png);"></div>
 			<div class="layers__item layer-2" style="background-image: url(/static/main/img/Pimg/layer-2.png);"></div>
 			<div class="layers__item layer-3">
 				<div class="hero-content">
 					<h1>Мобильная оптика <span>в наше время</span></h1>
-					<div class="hero-content__p">мобильный подход  к решению задач ‘lens effect’</div>
+					<div class="hero-content__p">оригинальный подход  к решению задач ‘лучшие линзы’</div>
 				</div>
 			</div>
 			<div class="layers__item layer-4">
@@ -68,10 +69,11 @@
     {% endif %}
   </div>
 
-<script src="js/Papp.js" defer></script> <!--paralax-->
-<script src="libs/rain.js" defer></script> <!--paralax-->
+
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="/static/main/js/index.js"></script>
+<script src="/static/main/js/Papp.js" defer></script> <!--paralax-->
+<script src="/static/main/libs/rain.js" defer></script> <!--paralax-->
 
 </body>
 </html>
