--- a/main/static/main/css/Pmain.css
+++ b/main/static/main/css/Pmain.css
@@ -9,12 +9,12 @@
 }
 @font-face {
 	font-family: kamerik-3d;
-	src: url(../static/main/fonts/kamerik205-heavy.woff2);
+	src: url(/static/main/fonts/kamerik205-heavy.woff2);
 	font-weight: 900;
 }
 @font-face {
 	font-family: merriweather-italic-3d;
-	src: url(../static/main/fonts/merriweather-regular-italic.woff2);
+	src: url("../static/main/fonts/merriweather-regular-italic.woff2");
 }
 body {
 	background-color: #000;
@@ -24,7 +24,7 @@ body {
 .logo {
 	 --logo-size: calc(var(--index) * 7.8);
 	width: var(--logo-size);
-	height: var(--logo-size);
+	/* height: var(--logo-size); */
 	background-repeat: no-repeat;
 	position: absolute;
 	left: calc(51% - calc(var(--logo-size) / 2));
