--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,14 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная</title>
+  
+  {% comment %} <link rel="icon" href="main\static\main\img\logo.ico" type="img/x-icon"> {% endcomment %}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
- 
+   
   <link rel="stylesheet" href="/static/main/css/Pmain.css"> <!--paralax-->
   <link rel="stylesheet" href="/static/main/css/index.css">
   </head>
 <body>
-    {% comment %} <img class="logo"src="/static/main/img/logo.png" alt="logotip"> {% endcomment %}
+     
 <!-- Основной контейнер слайдера -->
 <div class="swiper">
   <!-- Дополнительная требуемая оболочка -->
@@ -36,11 +38,11 @@
   <!-- Если нам нужна полоса прокрутки -->
   {% comment %} <div class="swiper-scrollbar"></div> {% endcomment %}
 </div>
-<div class="logo" style="background-image: url(/static/main/img/logo.png);"></div>
 
 	<section class="layers">
 		<div class="layers__container">
 			<div class="layers__item layer-1" style="background-image: url(/static/main/img/Pimg/layer-1.jpg);"></div>
+      <div><img class="logo"src="/static/main/img/logo.png" alt="logotip"></div>
       <div class="layers__item layer-2" style="background-image: url(/static/main/img/Pimg/layer-2.png);"></div>
 			<div class="layers__item layer-3">
 				<div class="hero-content">
