--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -66,12 +66,12 @@
   /* opacity: 0.5; */
 }
 
-.auth{
+/* .auth{
   /* position: fixed; */
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   margin-top: 30px;
-}
+} */ 
 
 @media(max-width:1250px){
   .swiper{
@@ -89,9 +89,7 @@
   }
 }
 
-.register{
-  border: solid rgb(61, 88, 239);
-  border-radius: 15px;
-  border-bottom: 50px;
+/* .register{
   
-}
+  
+} */
