создал папку video и прописал видео на странице lensess.html

--- a/main/templates/main/lensess.html
+++ b/main/templates/main/lensess.html
@@ -9,5 +9,16 @@
 <body>
   <h1>наши линзы</h1>
   <p>только качественная продукция</p>
+
+<div>
+ <video src="main/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4"></video>
+</div>
+<div></div>
+<div></div>
+<div></div>
+
+
+
+
 </body>
 </html>
