--- a/main/templates/main/lensess.html
+++ b/main/templates/main/lensess.html
@@ -11,7 +11,8 @@
   <p>только качественная продукция</p>
 
 <div>
- <video src="main/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4"></video>
+ <video class="video-len" src="/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4" controls></video>
+ <video class="video-len" src="/static/main/video/2021_08 Прогрессивные линзы.mp4" controls></video>
 </div>
 <div></div>
 <div></div>
