--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Главная</title>
   
-  {% comment %} <link rel="icon" href="main\static\main\img\logo.ico" type="img/x-icon"> {% endcomment %}
+  <link rel="icon" href="/static/main/img/logo.ico" type="img/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
    
@@ -45,7 +45,7 @@
             {% comment %} <div class="swiper-scrollbar"></div> {% endcomment %}
           </div>
 					{% comment %} <h1>Мобильная оптика <span>в наше время</span></h1> {% endcomment %}
-					<div class="hero-content__p">оригинальный подход  к решению задач ‘лучшие линзы’</div>
+					<div class="hero-content__p">original подход  к решению задач ‘лучшие линзы’</div>
           <div class='auth'>
             {% if user.is_authenticated %}
             {{user.username}}
