--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -44,7 +44,7 @@
             <!-- Если нам нужна полоса прокрутки -->
             {% comment %} <div class="swiper-scrollbar"></div> {% endcomment %}
           </div>
-					{% comment %} <h1>Мобильная оптика <span>в наше время</span></h1> {% endcomment %}
+					<h1>mobil оптика <span>в наше время</span></h1>
 					<div class="hero-content__p">original подход  к решению задач ‘лучшие линзы’</div>
           <div class='auth'>
             {% if user.is_authenticated %}
