--- a/main/templates/main/lensess.html
+++ b/main/templates/main/lensess.html
@@ -11,13 +11,29 @@
   <p>только качественная продукция</p>
 
 <div>
- <video class="video-len" src="/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4" controls></video>
- <video class="video-len" src="/static/main/video/2021_08 Прогрессивные линзы.mp4" controls></video>
+  <video class="video-len" src="/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4" controls></video>
 </div>
-<div></div>
-<div></div>
-<div></div>
-
+<div>
+  <video class="video-len" src="/static/main/video/2021_08 Прогрессивные линзы.mp4" controls></video>
+</div>
+<div>
+  <video class="video-len" src="/static/main/video/2021_06 BBGR protiv.mp4" controls></video>
+</div>
+<div>
+  <video class="video-len" src="/static/main/video/Neva Max UV Night Drive Boost protiv.mp4" controls></video>
+</div>
+<div>
+  <video class="video-len" src="/static/main/video/BBGR BLUVXpert.mp4" controls></video>
+</div>
+<div>
+  <video class="video-len" src="/static/main/video/ofise BBGR protiv.mp4" controls></video>
+</div>
+<div>
+  <video class="video-len" src="/static/main/video/TRANSITIONS_XTRACTIVE_NG.mp4" controls></video>
+</div>
+<div>
+  <video class="video-len" src="/static/main/video/Transitions GEN8 style.mp4" controls></video>
+</div>
 
 
 
