--- a/main/static/main/css/lensess.css
+++ b/main/static/main/css/lensess.css
@@ -8,17 +8,22 @@ a {
   color: black;
   text-decoration: none;
 }
-
+/* .text-l{
+  /* align: center; 
+} */
 body{
   padding-top: 50px;
   background-image: url("/static/main/img/lnbg.png"); 
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  
 }
 .video-len{
+  /* display: flex;
+  flex-wrap: wrap;
+  justify-content: center; */
 width: 400px;
+border-radius: 10px;
+  border: rgb(181, 181, 235) 5px solid;
 border-radius: 10px;
   border: rgb(181, 181, 235) 5px solid;
   -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
