--- a/main/templates/main/lensess.html
+++ b/main/templates/main/lensess.html
@@ -7,8 +7,10 @@
   <title>линзы</title>
 </head>
 <body>
-  <h1>наши линзы</h1>
-  <p>только качественная продукция</p>
+  <div class="text-l">
+    <h1>наши линзы</h1>
+    <p>только качественная продукция</p>
+  </div>
 
 <div>
   <video class="video-len" src="/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4" controls></video>
