расположид  объекты  на странице lensess

--- a/main/templates/main/lensess.html
+++ b/main/templates/main/lensess.html
@@ -8,34 +8,43 @@
 </head>
 <body>
   <div class="text-l">
-    <h1>наши линзы</h1>
-    <p>только качественная продукция</p>
+    <div>
+      <h1>наши линзы</h1>
+    </div>
+    <div>
+      <p>мы используем только качественную продукцию</p>
+    </div>
   </div>
 
-<div>
-  <video class="video-len" src="/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4" controls></video>
+<div class="block-a">
+  <div>
+    <video class="video-len" src="/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4" controls></video>
+  </div>
+  <div>
+    <video class="video-len" src="/static/main/video/2021_08 Прогрессивные линзы.mp4" controls></video>
+  </div>
+  <div>
+    <video class="video-len" src="/static/main/video/2021_06 BBGR protiv.mp4" controls></video>
+  </div>
+  <div>
+    <video class="video-len" src="/static/main/video/Neva Max UV Night Drive Boost protiv.mp4" controls></video>
+  </div>
 </div>
-<div>
-  <video class="video-len" src="/static/main/video/2021_08 Прогрессивные линзы.mp4" controls></video>
-</div>
-<div>
-  <video class="video-len" src="/static/main/video/2021_06 BBGR protiv.mp4" controls></video>
-</div>
-<div>
-  <video class="video-len" src="/static/main/video/Neva Max UV Night Drive Boost protiv.mp4" controls></video>
-</div>
-<div>
-  <video class="video-len" src="/static/main/video/BBGR BLUVXpert.mp4" controls></video>
-</div>
-<div>
-  <video class="video-len" src="/static/main/video/ofise BBGR protiv.mp4" controls></video>
-</div>
-<div>
-  <video class="video-len" src="/static/main/video/TRANSITIONS_XTRACTIVE_NG.mp4" controls></video>
-</div>
-<div>
-  <video class="video-len" src="/static/main/video/Transitions GEN8 style.mp4" controls></video>
-</div>
+  <div class="block-b">
+    <div>
+      <video class="video-len" src="/static/main/video/BBGR BLUVXpert.mp4" controls></video>
+    </div>
+    <div>
+      <video class="video-len" src="/static/main/video/ofise BBGR protiv.mp4" controls></video>
+    </div>
+    <div>
+      <video class="video-len" src="/static/main/video/TRANSITIONS_XTRACTIVE_NG.mp4" controls></video>
+    </div>
+    <div>
+      <video class="video-len" src="/static/main/video/Transitions GEN8 style.mp4" controls></video>
+    </div>
+  </div>
+
 
 
 
