--- a/main/static/main/css/lensess.css
+++ b/main/static/main/css/lensess.css
@@ -8,19 +8,24 @@ a {
   color: black;
   text-decoration: none;
 }
-/* .text-l{
-  /* align: center; 
-} */
+.text-l{
+  display: flex;  flex-direction: column;  justify-content:center; align-items: center;
+}
 body{
   padding-top: 50px;
   background-image: url("/static/main/img/lnbg.png"); 
   background-size: cover;
   
 }
+.block-a{
+  display: flex;  flex-direction: row;  justify-content: space-around;
+  margin: 50px;
+  padding: 50px;
+}
+.block-b{
+  display: flex;  flex-direction: row;  justify-content: space-between;
+}
 .video-len{
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: center; */
 width: 400px;
 border-radius: 10px;
   border: rgb(181, 181, 235) 5px solid;
