--- a/main/templates/main/lensess.html
+++ b/main/templates/main/lensess.html
@@ -16,31 +16,40 @@
     </div>
   </div>
 
-<div class="block-a">
-  <div>
-    <video class="video-len" src="/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4" controls></video>
+  <div class="block-a">
+    <div>
+      <h3 class="H3-block">Навстречу свету <br>с линзами BBGR Transitions</h3>
+      <video class="video-len" src="/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4" controls></video>
+    </div>
+    <div>
+      <h3 class="H3-block">Прогрессивные линзы <br>BBGR</h3>
+      <video class="video-len" src="/static/main/video/2021_08 Прогрессивные линзы.mp4" controls></video>
+    </div>
+    <div>
+      <h3 class="H3-block">Окрашенные линзы <br>BBGR</h3>
+      <video class="video-len" src="/static/main/video/2021_06 BBGR protiv.mp4" controls></video>
+    </div>
+    <div>
+      <h3 class="H3-block">Линзы для вождения <br> технология Night Drive Boost</h3>
+      <video class="video-len" src="/static/main/video/Neva Max UV Night Drive Boost protiv.mp4" controls></video>
+    </div>
   </div>
-  <div>
-    <video class="video-len" src="/static/main/video/2021_08 Прогрессивные линзы.mp4" controls></video>
-  </div>
-  <div>
-    <video class="video-len" src="/static/main/video/2021_06 BBGR protiv.mp4" controls></video>
-  </div>
-  <div>
-    <video class="video-len" src="/static/main/video/Neva Max UV Night Drive Boost protiv.mp4" controls></video>
-  </div>
-</div>
+
   <div class="block-b">
     <div>
+      <h3 class="H3-block">Технология BLUVXpert. <br> защита глаз от вредного синего света</h3>
       <video class="video-len" src="/static/main/video/BBGR BLUVXpert.mp4" controls></video>
     </div>
     <div>
+      <h3 class="H3-block">Офисные линзы <br>BBGR</h3>
       <video class="video-len" src="/static/main/video/ofise BBGR protiv.mp4" controls></video>
     </div>
     <div>
+      <h3 class="H3-block">Фотохромные линзы <br>Transitions XTRActive NG</h3>
       <video class="video-len" src="/static/main/video/TRANSITIONS_XTRACTIVE_NG.mp4" controls></video>
     </div>
     <div>
+      <h3 class="H3-block">Фотохромные линзы BBGR Transitions GEN8.<br> Стильная защита ваших глаз.</h3>
       <video class="video-len" src="/static/main/video/Transitions GEN8 style.mp4" controls></video>
     </div>
   </div>
