--- a/main/static/main/css/Pmain.css
+++ b/main/static/main/css/Pmain.css
@@ -8,18 +8,18 @@
 	--transition: 1.5s cubic-bezier(.05, .5, 0, 1);
 }
 @font-face {
-	font-family: kamerik-3d;
-	src: url(/static/main/fonts/kamerik205-heavy.woff2);
+	font-family: pizza-hut;
+	src: url("/main/static/main/fonts/pizza-hut.otf");
 	font-weight: 900;
 }
-@font-face {
+/* @font-face {
 	font-family: merriweather-italic-3d;
 	src: url("/static/main/fonts/merriweather-regular-italic.woff2");
-}
+} */
 body {
 	background-color: #000;
 	color: #fff;
-	font-family: kamerik-3d;
+	font-family: pizza-hut;
 }
 .logo {
 	 --logo-size: calc(var(--index) * 7.8);
@@ -78,7 +78,7 @@ body {
 }
 .hero-content__p {
 	text-transform: none;
-	font-family: merriweather-italic-3d;
+	font-family: pizza-hut;
 	letter-spacing: normal;
 	font-size: calc(var(--index) * .73);
 	line-height: 3;
