--- a/main/static/main/css/lensess.css
+++ b/main/static/main/css/lensess.css
@@ -28,10 +28,16 @@ body{
 
 .H3-block{
   color: #220762;
-  background-color: #9ee1ed;
+  background-color: #c1e5eb;
   text-align: center;
   margin-bottom: 10px;
   width: 400px;
+  
+  overflow: auto;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	/* -webkit-line-clamp: 2; */
+	-webkit-box-orient: vertical;
 border-radius: 10px;
   border: rgb(181, 181, 235) 5px solid;
 border-radius: 10px;
@@ -50,5 +56,5 @@ border-radius: 10px;
   -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
-  
 }
+
