добавил на about логотип

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -7,7 +7,8 @@
   <title>о нас</title>
 </head>
 <body>
+  <div><img class="logo" src="/static/main/img/logo.png" alt="logotip"></div>
   <h1>о нас</h1>
-  <p>новое качество нашей оптики - это мобильность</p>
+  <p>новое качество нашей оптики - это  мобильность</p>
 </body>
 </html>
