--- a/main/static/main/css/about.css
+++ b/main/static/main/css/about.css
@@ -8,7 +8,11 @@ a {
   color: black;
   text-decoration: none;
 }
-
+.logo {
+  margin-top: -20px;
+  width: 150px;
+ 
+}
 body{
   padding-top: 50px;
   background-image: url("/static/main/img/abbg.jpg"); 
