--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -44,8 +44,8 @@
             <!-- Если нам нужна полоса прокрутки -->
             {% comment %} <div class="swiper-scrollbar"></div> {% endcomment %}
           </div>
-					<h1>mobil оптика <span>в наше время</span></h1>
-					<div class="hero-content__p">original подход  к решению задач ‘лучшие линзы’</div>
+					<h1>мобильность - лучшее решение <span>нашего времени</span></h1>
+					<div class="hero-content__p">нестандартный подход  к решению задач</div>
           <div class='auth'>
             {% if user.is_authenticated %}
             {{user.username}}
