--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -8,7 +8,13 @@
 </head>
 <body>
   <div><img class="logo" src="/static/main/img/logo.png" alt="logotip"></div>
-  <h1>о нас</h1>
+  <h1>Познакомимся?</h1>
   <p>новое качество нашей оптики - это  мобильность</p>
+  <div class="ram-block"><p>Мы оптика, да ещё и мобильная, где заказать себе очки проще простого. Нам 10 лет и за это время мы стали своими для многих людей.
+  Если вы читаете этот текст, то теперь точно входите в этот круг. Что же это значит? А значит это то, что теперь оптика и врач может приехать к вам.
+  Да, вам не показалось. Мы можем приехать к вам, проверить зрение, подобрать оправу, линзы, составить заказ, определить время и адрес доставки, или самовывоза. 
+  Но есть исключение - детям до 14ти лет проверка зрения осуществляется только в кабинете офтальмолога. А кабинет 
+  находится в прекрасном медицинском центре <a href="https://okean-zdorovya.ru/"><span class="ocean">"Океан здоровья"</span></a>
+</p></div>
 </body>
 </html>
