добавил на about фрифт и так по мелочи на lensess

--- a/main/templates/main/lensess.html
+++ b/main/templates/main/lensess.html
@@ -18,7 +18,11 @@
 
   <div class="block-a">
     <div>
-      <h3 class="H3-block">Навстречу свету <br>с линзами BBGR Transitions</h3>
+      <h3 class="H3-block">Навстречу свету <br>с линзами BBGR Transitions<details>Фотохромные линзы семейства Transitions XTRActive обеспечивают лучшее затемнение и защиту от яркого света в помещении, на улице и даже в автомобиле. Реагируют не только на ультрафиолетовые лучи, но также и на видимый солнечный свет. Затемняются внутри автомобиля за лобовым стеклом, обеспечивая водителю комфортное затемнение до 2 категории (до 50%). На улице даже в жаркую погоду они могут заменить солнцезащитные очки, так как затемняются более чем на 90% .
+
+        Новое поколение фотохромных линз BBGR Transitions XTRActive NG представлено в трёх классических цветах: коричневом, сером и серо-зелёном. Можно заказать в материалах 1.5, 1.6, 1.67 в однофокальных и прогрессивных дизайнах в сочетании с мультипокрытиями Neva Max UV, Neva Max UV Night Drive Boost, Diam's Clear UV, Diam's Clear и Mirrors.
+        
+        Фотохромные поляризационные линзы BBGR Transitions XTRActive Polarized представлены в одном классическом цвете – сером. Можно заказать в материалах 1.5, 1.6, 1.67 в однофокальных и прогрессивных дизайнах в сочетании с мультипокрытиями Neva Max UV, Neva Max UV Night Drive Boost, Neva Max Solaire UV, Diam's Clear UV, Diam's Clear.</details></h3>
       <video class="video-len" src="/static/main/video/01 FSTS_Ruby_Video_16-9_20sec_RUS.mp4" controls></video>
 
     </div>
