--- a/main/static/main/css/about.css
+++ b/main/static/main/css/about.css
@@ -11,14 +11,13 @@ a {
 .logo {
   margin-top: -20px;
   width: 150px;
-
+}
 @font-face {
-  font-family: pizza-hut;
-  src: url(/main/static/main/fonts/pizza-hut.otf);
+  font-family: FONT_Regular;
+  src: url("/main/static/main/fonts/FONT_Regular.ttf");
   font-weight: 900;
 }
  
-}
 body{
   padding-top: 50px;
   background-image: url("/static/main/img/abbg.jpg"); 
@@ -39,8 +38,13 @@ border-radius: 10px;
   -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
-  font-family: pizza-hut;
+  font-size: 20px;
+  font-family: FONT_Regular;
 }
+.text-a{
+  font-family: FONT_Regular;
+}
+
 .ocean{
   color: #070bec;
 }
