испрравил на главной странице заголовок новости на акции

--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -19,8 +19,8 @@ a:hover{
   background-image: url("/static/main/img/frame.png");
   background-size: cover;
 }
-#news{
-  background-image: url("/static/main/img/news.jpg");
+#sale{
+  background-image: url("/static/main/img/sale.jpg");
   background-size: cover;
 }
 #lensess{
