--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -31,7 +31,7 @@
               <a class="swiper-slide" id="frame" href='/frame'>оправы</a>
               <a class="swiper-slide" id="about" href='/about'>о нас</a>
               <a class="swiper-slide" id="lensess" href='/lensess'>линзы</a>
-              <a class="swiper-slide" id="news" href='/news'>новости оптики</a>
+              <a class="swiper-slide" id="sale" href='/sale'>акции</a>
               <a class="swiper-slide" id="portfolio" href='/portfolio'>наши работы</a>
               <a class="swiper-slide" id="reviews" href='/review'>отзывы</a>
               <a class="swiper-slide" id="organizations" href='/organizations'>организациям</a>
