--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -14,7 +14,7 @@
   Если вы читаете этот текст, то теперь тоже можете войти в круг наших друзей. Что же это значит? А это значит, что теперь оптика и врач могут приехать к вам.
   Да, вам не показалось. Мы можем приехать к вам, проверить зрение, подобрать оправу, линзы, составить заказ, определить время и адрес доставки или самовывоза. 
   Но есть исключение - детям до 14-ти лет проверка зрения осуществляется только в кабинете офтальмолога. А кабинет 
-  находится в прекрасном медицинском центре <a href="https://okean-zdorovya.ru/"><span class="ocean">"Океан здоровья"</span></a> kjhfgfhgf
+  находится в прекрасном медицинском центре <a href="https://okean-zdorovya.ru/"><span class="ocean">"Океан здоровья"</span></a> 
 </p></div>
 </body>
 </html>
