--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <div><img class="logo" src="/static/main/img/logo.png" alt="logotip"></div>
-  <h1>Познакомимся?</h1>
-  <p>новое качество нашей оптики - это  мобильность</p>
+  <div>
+    <h1>Познакомимся?</h1>
+    <p>новое качество нашей оптики - это  мобильность</p>
+  </div>
   <div class="ram-block"><p class="text-a">Мы - оптика, да ещё и мобильная, где заказать себе очки проще простого. Нам 10 лет, и за это время мы стали своими для многих людей.
   Если вы читаете этот текст, то теперь тоже можете войти в круг наших друзей. Что же это значит? А это значит, что теперь оптика и врач могут приехать к вам.
   Да, вам не показалось. Мы можем приехать к вам, проверить зрение, подобрать оправу, линзы, составить заказ, определить время и адрес доставки или самовывоза. 
