--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div><img class="logo" src="/static/main/img/logo.png" alt="logotip"></div>
-  <div>
+  <div class="uptext">
     <h1>Познакомимся?</h1>
     <p>новое качество нашей оптики - это  мобильность</p>
   </div>
