--- a/main/static/main/css/about.css
+++ b/main/static/main/css/about.css
@@ -20,12 +20,18 @@ a {
  
 body{
   padding-top: 50px;
-  background-image: url("/static/main/img/abbg.jpg"); 
+  background-image: url("/static/main/img/bgab.jpg"); 
   background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+.uptext{
+  text-align: center;
+  color: rgb(70, 8, 214);
+}
+
 .ram-block{
   background-color: rgba(234, 238, 241, 0.6);
   margin-top: 200px;
