добавил тень к тексту на about

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -13,10 +13,7 @@
   <link rel="stylesheet" href="/static/main/css/index.css">
   </head>
 <body>
-     
-
-
-	<section class="layers">
+  <section class="layers">
 		<div class="layers__container">
 			<div class="layers__item layer-1" style="background-image: url(/static/main/img/Pimg/layer-1.jpg);"></div>
       <div><img class="logo"src="/static/main/img/logo.png" alt="logotip"></div>
@@ -36,12 +33,12 @@
               <a class="swiper-slide" id="reviews" href='/review'>отзывы</a>
               <a class="swiper-slide" id="organizations" href='/organizations'>организациям</a>
             </div>
-            <!-- если нам нужна разбивка на страницы -->
+            <!-- здесь разбивка на страницы -->
             <div class="swiper-pagination"></div>
-            <!-- если нам нужны навигационные кнопки -->
+            <!-- ниже навигационные кнопки -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
-            <!-- Если нам нужна полоса прокрутки -->
+            <!-- Если нам нужна полоса прокрутки, включи ниже-->
             {% comment %} <div class="swiper-scrollbar"></div> {% endcomment %}
           </div>
 					<h3>+7-926-444-33-74</h3>
