--- a/main/static/main/css/about.css
+++ b/main/static/main/css/about.css
@@ -30,6 +30,7 @@ body{
 .uptext{
   text-align: center;
   color: rgb(70, 8, 214);
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 .ram-block{
