добавил текст и стили к нему на стр. организациям

--- a/main/static/main/css/organizations.css
+++ b/main/static/main/css/organizations.css
@@ -8,7 +8,15 @@ a {
   color: black;
   text-decoration: none;
 }
-
+.logo {
+  margin-top: -20px;
+  width: 150px;
+}
+@font-face {
+  font-family: SemiBoldItalic;
+  src: url("/static/main/fonts/SemiBoldItalic.ttf");
+  font-weight: 900;
+}
 body{
   padding-top: 50px;
   background-image: url("/static/main/img/orbg.jpg"); 
@@ -16,4 +24,25 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.uptext{
+  text-align: center;
+  color: rgb(70, 8, 214);
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4);
+}
+.ram-block{
+  background-color: rgba(234, 238, 241, 0.6);
+  margin-top: 200px;
+  padding: 15px;
+  width: 800px;
+  border: solid;
+  border-radius: 10px;
+  border: rgb(181, 181, 235) 5px solid;
+border-radius: 10px;
+  border: rgb(181, 181, 235) 5px solid;
+  -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+  -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+  box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+  font-size: 20px;
+  font-family: SemiBoldItalic;
 }
