--- a/main/templates/main/organizations.html
+++ b/main/templates/main/organizations.html
@@ -7,7 +7,19 @@
   <title>организациям</title>
 </head>
 <body>
-  <h1>Услуги организациям, фирмам</h1>
-  <p>Мы с экономим ваше время и готовы приехать в офис</p>
+  <div><img class="logo" src="/static/main/img/logo.png" alt="logotip"></div>
+  <div class="uptext">
+    <h1>Услуги организациям, фирмам</h1>
+    <p>Мы с экономим ваше время и готовы приехать в офис</p>
+  </div>
+
+  <div class="ram-block"><p>Мы - оптика, да ещё и мобильная, где заказать себе очки проще простого. Нам 10 лет, и за это время мы стали своими для многих людей.
+    Если вы читаете этот текст, то теперь тоже можете войти в круг наших друзей. Что же это значит? А это значит, что теперь оптика и врач могут приехать к вам.
+    Да, вам не показалось. Мы можем приехать к вам, проверить зрение, подобрать оправу, линзы, составить заказ, определить время и адрес доставки или самовывоза. 
+    Но есть исключение - детям до 16-ти лет проверка зрения осуществляется 
+  </p></div>
+
+
+
 </body>
 </html>
