--- a/main/templates/main/organizations.html
+++ b/main/templates/main/organizations.html
@@ -13,10 +13,14 @@
     <p>Мы с экономим ваше время и готовы приехать в офис</p>
   </div>
 
-  <div class="ram-block"><p>Мы - оптика, да ещё и мобильная, где заказать себе очки проще простого. Нам 10 лет, и за это время мы стали своими для многих людей.
-    Если вы читаете этот текст, то теперь тоже можете войти в круг наших друзей. Что же это значит? А это значит, что теперь оптика и врач могут приехать к вам.
-    Да, вам не показалось. Мы можем приехать к вам, проверить зрение, подобрать оправу, линзы, составить заказ, определить время и адрес доставки или самовывоза. 
-    Но есть исключение - детям до 16-ти лет проверка зрения осуществляется 
+  <div class="ram-block"><p>Предлагаем сотрудничать фирмам и организациям.
+     Всем тем, кто заботится о своих подчиненных и для кого люди не просто инструмент достижения поставленной цели.
+     Все мы знаем, что минимум один раз в году необходимо проверять зрение и если работа коллектива связана с работой 
+     за компьютером, за рулем автомобиля, офисная работа то мы по взаимному согласию возмем заботу о зрении
+     вашего коллектива на себя. Нам нужно только договориться о дате и времени. Мы при необходимости проверим зрение,
+     подберем оправу и линзы, в зависимости от потребности и согласуем дату доставки заказа. 
+     Вы как руководитель можете взять на себя оплату определенног процента от заказа вашего сотрудника, проявив свою заботу
+     о своих подчиненных.
   </p></div>
 
 
