добавил ещё текст и фрифты Астра

--- a/main/templates/main/organizations.html
+++ b/main/templates/main/organizations.html
@@ -20,7 +20,8 @@
      вашего коллектива на себя. Нам нужно только договориться о дате и времени. Мы при необходимости проверим зрение,
      подберем оправу и линзы, в зависимости от потребности и согласуем дату доставки заказа. 
      Вы как руководитель можете взять на себя оплату определенног процента от заказа вашего сотрудника, проявив свою заботу
-     о своих подчиненных.
+     о своих подчиненных. По согласию, мы сохраним данные о зрении и на следующий год проверим динамику. Доверив нам 
+     своё зрение, мы будем его оберегать!
   </p></div>
 
 
