--- a/main/static/main/css/organizations.css
+++ b/main/static/main/css/organizations.css
@@ -13,8 +13,8 @@ a {
   width: 150px;
 }
 @font-face {
-  font-family: SemiBoldItalic;
-  src: url("/static/main/fonts/SemiBoldItalic.ttf");
+  font-family: Astra;
+  src: url("/static/main/fonts/PTAstraSerifBold.ttf");
   font-weight: 900;
 }
 body{
@@ -44,5 +44,7 @@ border-radius: 10px;
   -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   font-size: 20px;
-  font-family: SemiBoldItalic;
+  font-family: Astra;
+  text-align:justify;
+  text-indent: 25px; 
 }
