--- a/main/templates/main/organizations.html
+++ b/main/templates/main/organizations.html
@@ -13,16 +13,22 @@
     <p>Мы с экономим ваше время и готовы приехать в офис</p>
   </div>
 
-  <div class="ram-block"><p>Предлагаем сотрудничать фирмам и организациям.
+  <div class="ram-block">
+    <p>
+    Предлагаем сотрудничать фирмам и организациям.
      Всем тем, кто заботится о своих подчиненных и для кого люди не просто инструмент достижения поставленной цели.
      Все мы знаем, что минимум один раз в году необходимо проверять зрение и если работа коллектива связана с работой 
      за компьютером, за рулем автомобиля, офисная работа то мы по взаимному согласию возмем заботу о зрении
-     вашего коллектива на себя. Нам нужно только договориться о дате и времени. Мы при необходимости проверим зрение,
-     подберем оправу и линзы, в зависимости от потребности и согласуем дату доставки заказа. 
-     Вы как руководитель можете взять на себя оплату определенног процента от заказа вашего сотрудника, проявив свою заботу
-     о своих подчиненных. По согласию, мы сохраним данные о зрении и на следующий год проверим динамику. Доверив нам 
-     своё зрение, мы будем его оберегать!
-  </p></div>
+     вашего коллектива на себя.
+    </p> 
+    <p>
+      Нам нужно только договориться о дате и времени. Мы при необходимости проверим зрение,
+      подберем оправу и линзы, в зависимости от потребности и согласуем дату доставки заказа.
+      Вы как руководитель можете взять на себя оплату определенног процента от заказа вашего сотрудника, проявив свою заботу
+      о своих подчиненных. По согласию, мы сохраним данные о зрении и на следующий год проверим динамику. Доверив нам
+      своё зрение, мы будем его оберегать!
+    </p>
+  </div>
 
 
 
