замена фото на слайде организациям и фона этой ссылки

--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -36,7 +36,7 @@ a:hover{
   background-size: cover;
 }
 #organizations{
-  background-image: url("/static/main/img/orbg.jpg");
+  background-image: url("/static/main/img/orgbg.jpeg");
   background-size: cover;
 }
 .swiper-slide{
