--- a/main/static/main/css/about.css
+++ b/main/static/main/css/about.css
@@ -48,6 +48,8 @@ border-radius: 10px;
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   font-size: 20px;
   font-family: SemiBoldItalic;
+  text-align:justify;
+  text-indent: 25px; 
 }
 .text-a{
   font-family: SemiBoldItalic;
