--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -7,7 +7,13 @@
   <title>оправы</title>
 </head>
 <body>
-  <h1>наши оправы</h1>
-  <p>только качественная продукция</p>
+  <div class="text-l">
+    <div>
+      <h1>наши оправы</h1>
+    </div>
+    <div>
+      <p>только качественная продукция</p>
+    </div>
+  </div>
 </body>
 </html>
