--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -42,7 +42,7 @@
             {% comment %} <div class="swiper-scrollbar"></div> {% endcomment %}
           </div>
 					<h3 class="namber-top"><a class="namber-phone" href="tel:+79264443374">+7-926-444-33-74</a></h3>
-					<div class="hero-content__p"><p>лучшее решение нашего времени</p></div>
+					<div class="hero-content__p"><p>Лучшее решение нашего времени!</p></div>
           <div class='auth'>
             {% if user.is_authenticated %}
             <a href="/login/profile">{{user.username}}</a>
