--- a/main/templates/main/organizations.html
+++ b/main/templates/main/organizations.html
@@ -9,24 +9,27 @@
 <body>
   <div><img class="logo" src="/static/main/img/logo.png" alt="logotip"></div>
   <div class="uptext">
-    <h1>Услуги организациям, фирмам</h1>
-    <p>Мы с экономим ваше время и готовы приехать в офис</p>
+    <h1>Услуги фирмам и организациям!</h1>
   </div>
 
   <div class="ram-block">
+    
     <p>
-    Предлагаем сотрудничать фирмам и организациям.
-     Всем тем, кто заботится о своих подчиненных и для кого люди не просто инструмент достижения поставленной цели.
-     Все мы знаем, что минимум один раз в году необходимо проверять зрение и если работа коллектива связана с работой 
-     за компьютером, за рулем автомобиля, офисная работа то мы по взаимному согласию возмем заботу о зрении
-     вашего коллектива на себя.
-    </p> 
+      Приглашаем к сотрудничеству фирмы и организации.
+       Приглашаем всех, кто заботится о своих сотрудниках, и для кого люди - не просто инструмент достижения поставленной цели.
+    </p>
+     <p>
+       Все мы знаем, что минимум один раз в год необходимо проверять зрение, и если деятельность коллектива связана с
+       компьютером, вождением автомобиля, работой в офисе, то мы возьмем заботу о зрении
+       вашего коллектива на себя.
+     </p> 
     <p>
-      Нам нужно только договориться о дате и времени. Мы при необходимости проверим зрение,
-      подберем оправу и линзы, в зависимости от потребности и согласуем дату доставки заказа.
-      Вы как руководитель можете взять на себя оплату определенног процента от заказа вашего сотрудника, проявив свою заботу
-      о своих подчиненных. По согласию, мы сохраним данные о зрении и на следующий год проверим динамику. Доверив нам
-      своё зрение, мы будем его оберегать!
+      Для сотрудничества с нами Вам необходимо согласовать с нами дату и время выезда в вашу организацию.
+      При необходимости мы осуществляем проверку зрения, подбираем оправу и очковые линзы, 
+      обговариваем дату доставки готового заказа.
+      Вы как руководитель можете взять на себя оплату части заказа вашего сотрудника, проявив свою заботу
+      о своих подчиненных. По желанию, мы сохраним данные о зрении и на следующий год проверим динамику. 
+      Доверив нам зрение, вы экономите время и повышаете работоспособность своего коллектива!
     </p>
   </div>
 
